@@ -2128,6 +2128,8 @@ code {
 
 <p><strong>power.wall_power</strong> | <code>repeatable(power_id, int) : Power, Chance to cast</code> | Trigger a power if the hazard hit a wall.</p>
 
+<p><strong>power.expire_power</strong> | <code>repeatable(power_id, int) : Power, Chance to cast</code> | Trigger a power when the hazard's lifespan expires.</p>
+
 <p><strong>power.wall_reflect</strong> | <code>bool</code> | Moving power will bounce off walls and keep going</p>
 
 <p><strong>power.spawn_type</strong> | <code>predefined_string</code> | For non-transform powers, an enemy is spawned from this category. For transform powers, the caster will transform into a creature from this category.</p>
